criar_tela_lojaa

--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre nossa organização</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Entre em contato</a></li>
+                    <li><a asp-area="" asp-controller="TeladeLojas" asp-action="Index">Lojas</a></li>
                 </ul>
             </div>
         </div>
