--- a/ProjetoPET/Views/Lojas/Edit.cshtml
+++ b/ProjetoPET/Views/Lojas/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjetoPET.Models.TeladeLojas
+﻿@model ProjetoPET.Models.Lojas
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,16 +6,16 @@
 
 <h2>Edit</h2>
 
-<h4>TeladeLojas</h4>
+<h4>Lojas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="NomeEmpresa" class="control-label"></label>
-                <input asp-for="NomeEmpresa" class="form-control" />
-                <span asp-validation-for="NomeEmpresa" class="text-danger"></span>
+                <label asp-for="NomeLoja" class="control-label"></label>
+                <input asp-for="NomeLoja" class="form-control" />
+                <span asp-validation-for="NomeLoja" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RazaoSocial" class="control-label"></label>
@@ -71,6 +71,11 @@
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImagePath" class="control-label"></label>
+                <input asp-for="ImagePath" class="form-control" />
+                <span asp-validation-for="ImagePath" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
