--- a/ProjetoPET/Views/Lojas/Delete.cshtml
+++ b/ProjetoPET/Views/Lojas/Delete.cshtml
@@ -1,20 +1,21 @@
-﻿@model ProjetoPET.Models.TeladeLojas
+﻿@model ProjetoPET.Models.Lojas
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TeladeLojas</h4>
+    <h4>Lojas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.NomeEmpresa)
+            @Html.DisplayNameFor(model => model.NomeLoja)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.NomeEmpresa)
+            @Html.DisplayFor(model => model.NomeLoja)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RazaoSocial)
@@ -83,6 +84,12 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ImagePath)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ImagePath)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
         <dd>
@@ -95,8 +102,10 @@
             @Html.DisplayFor(model => model.ModifiedDate)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
