--- a/ProjetoPET/Views/Lojas/Details.cshtml
+++ b/ProjetoPET/Views/Lojas/Details.cshtml
@@ -1,21 +1,23 @@
-﻿@model ProjetoPET.Models.TeladeLojas
+﻿@model ProjetoPET.Models.Lojas
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
+     var photoPath = "~/images/LojasPhotos/" + (Model.ImagePath ?? "imagem.png");
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TeladeLojas</h4>
+    <h4>Lojas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.NomeEmpresa)
+            <img src="@photoPath" width="200" height="200" asp-append-version="true" />
+
+            @Html.DisplayNameFor(model => model.NomeLoja)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.NomeEmpresa)
+            @Html.DisplayFor(model => model.NomeLoja)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RazaoSocial)
@@ -84,6 +86,12 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ImagePath)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ImagePath)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
         <dd>
@@ -96,10 +104,8 @@
             @Html.DisplayFor(model => model.ModifiedDate)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
