--- a/ProjetoPET/Views/Produto/Create.cshtml
+++ b/ProjetoPET/Views/Produto/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model ProjetoPET.Models.Produto
+﻿@model ProjetoPET.ViewModel.PropagandaViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastrar propaganda";
 }
 
 <h2>Create</h2>
@@ -24,21 +24,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Foto" class="control-label"></label>
-                <input asp-for="Foto" class="form-control" />
-                <span asp-validation-for="Foto" class="text-danger"></span>
+                <input type="file" class="form-control" name="foto" required="required"/>            
             </div>
             <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedData" class="control-label"></label>
-                <input asp-for="UpdatedData" class="form-control" />
-                <span asp-validation-for="UpdatedData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </form>
     </div>
