--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -35,8 +35,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Entre em contato</a></li>
                     <li><a asp-area="" asp-controller="Pet" asp-action="Index">Cadastre seu PeT</a></li>
                     <li><a asp-area="" asp-controller="Evento" asp-action="Index">Eventos</a></li>
-                  
+
                     <li><a asp-area="" asp-controller="Adocao" asp-action="Index">Adoção</a></li>
+                    <li><a asp-area="" asp-controller="Produto" asp-action="Index">Produtos</a></li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
