--- a/ProjetoPET/Views/Lojas/Edit.cshtml
+++ b/ProjetoPET/Views/Lojas/Edit.cshtml
@@ -84,9 +84,9 @@
                 <span asp-validation-for="CreatedDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ModifiedDate" class="control-label"></label>
-                <input asp-for="ModifiedDate" class="form-control" />
-                <span asp-validation-for="ModifiedDate" class="text-danger"></span>
+                <label asp-for="UpdatedData" class="control-label"></label>
+                <input asp-for="UpdatedData" class="form-control" />
+                <span asp-validation-for="UpdatedData" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
