--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">Cadastre seu PeT</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Evento" asp-action="Index">Eventos</a></li>
                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Adocao" asp-action="Index">Adoção</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Lojas" asp-action="Index">Loja</a></li>
             </ul>
             @await Html.PartialAsync("_LoginPartial")
             <form class="form-inline my-2 my-lg-0">
