--- a/ProjetoPET/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoPET/Views/Shared/_LoginPartial.cshtml
@@ -6,12 +6,12 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm">
-        <ul class="nav navbar-nav">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Olá @UserManager.GetUserName(User)!</a>
+                <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserManager.GetUserName(User)</a>
             </li>
             <li class="nav-item">
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Sair</button>
+                <button type="submit" class="btn btn-link navbar-btn nav-link">Sair</button>
             </li>
         </ul>
     </form>
@@ -19,8 +19,8 @@
 else
 {
     <ul class="nav navbar-nav">
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Register">Registrar</a></li>
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+        <li class="nav-item"><a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Registrar</a></li>
+        <li class="nav-item"><a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a></li>
     </ul>
 }
 
